--- a/OccludedFaceDetection.ipynb
+++ b/OccludedFaceDetection.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,7 @@
     "\n",
     "from datasets.CFPfrontal import CFPFrontal\n",
     "from datasets.CFPprofile import CFPProfile\n",
+    "from datasets.ImageFolder import ImageFolder\n",
     "from datasets.afdb import AFDB\n",
     "\n",
     "\n",
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_results(name):\n",
-    "    dataset = CFPFrontal(\"~/Downloads/\" + name)\n",
+    "def analyze(path):\n",
+    "    dataset = ImageFolder(path)\n",
     "    \n",
-    "    print(\"=== {} ===\".format(name))\n",
+    "    print(\"=== {} ===\".format(path))\n",
     "    analysis = FaceAnalysis(mt,dataset)\n",
     "    analysis.calcAcc(copy_file_to_downloads_folder=False)\n",
     "    print(\"= MTCNN =\")\n",
@@ -491,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
